<resources>
    <string name="app_name">FurEver</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="user_details">User details</string>
    <string name="log_out">Log out</string>
    <string name="next_question">Next Question</string>
    <string name="finish">finish</string>
    <string name="prev_question">Prev Question</string>
    <string name="submit">Submit</string>
    <string name="match_1">Match 1</string>
    <string name="match_2">Match 2</string>
    <string name="match_3">Match 3</string>
    <string name="selected_dog_image">Selected Dog Image</string>
    <!-- Add Google Maps API Key -->
    <string name="google_maps_api_key">API Key</string>
</resources>